--- a/css/style.css
+++ b/css/style.css
@@ -583,12 +583,12 @@ textarea {
 .social-links {
 	padding: 0;
 	list-style: none;
-	margin: 15px 0;
+	/*margin: 15px 0;*/
 }
 .social-links li {
 	margin: 10px 25px 10px 0;
 	display: inline-block;
-	font-size: 36px;
+	font-size: 18px;
 }
 .social-links li a {
 	color: #333333;
